--- a/arkivskaber.html
+++ b/arkivskaber.html
@@ -1745,7 +1745,7 @@ of Lorem Ipsum.
       </div>
     </div>
 
-    <!-- Modal tilfoej overordnede aktoerer -->
+    <!-- Modal tilknyt overordnede aktoerer -->
     <div
       class="modal fade"
       id="tilfoejoverordnedeaktoerer"
@@ -1761,7 +1761,7 @@ of Lorem Ipsum.
               class="modal-title font-weight-bold"
               id="tilfoejoverordnedeaktoererModalLabel"
             >
-              Tilføj Overordnede Aktører
+              Tilknyt Overordnede Aktører
             </h5>
             <button
               type="button"
@@ -1848,6 +1848,9 @@ of Lorem Ipsum.
                 </div>
               </div>
             </div>
+            <h4 class="mb-3 ml-2 mt-3">
+              <span class="font-weight-bold">33</span> resultater
+            </h4>
             <div class="card special mt-3 mb-3">
               <div class="card-body p-0">
                 <div class="table-responsive">
@@ -1915,7 +1918,7 @@ of Lorem Ipsum.
       </div>
     </div>
 
-    <!-- Modal tilfoej underordenede aktoerer -->
+    <!-- Modal tilknyt underordenede aktoerer -->
     <div
       class="modal fade"
       id="tilfoejunderordenedeaktoerer"
@@ -1931,7 +1934,7 @@ of Lorem Ipsum.
               class="modal-title font-weight-bold"
               id="tilfoejunderordenedeaktoererModalLabel"
             >
-              Tilføj Underordenede Aktører
+              Tilknyt Underordenede Aktører
             </h5>
             <button
               type="button"
@@ -2018,108 +2021,115 @@ of Lorem Ipsum.
                 </div>
               </div>
             </div>
-            <div class="table-responsive">
-              <table
-                id=""
-                width="100%"
-                class="table sorting table-hover table-striped mb-0"
-              >
-                <thead>
-                  <tr>
-                    <th scope="col" class="d-flex align-items-center">
-                      <div
-                        class="form-check form-inline p-0 d-flex align-items-center"
-                      >
-                        <input
-                          class="form-check-input"
-                          type="checkbox"
-                          value=""
-                          class="clickable-checkbox-all"
-                          id="defaultCheck1"
-                        />
-                      </div>
-                    </th>
-                    <th scope="col">Navn</th>
-                    <th scope="col">Fra</th>
-                    <th scope="col">Til</th>
-                    <th scope="col">Navnetype</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr class="clickable-checkbox">
-                    <td>
-                      <div
-                        class="form-check form-inline p-0 d-flex align-items-center mt-1"
-                      >
-                        <input
-                          class="form-check-input"
-                          type="checkbox"
-                          value=""
-                          id="defaultCheck1"
-                        />
-                      </div>
-                    </td>
-                    <td>Frederiksberg Politi</td>
-                    <td>1988</td>
-                    <td>2020</td>
-                    <td>Officielt</td>
-                  </tr>
-                  <tr class="clickable-checkbox">
-                    <td>
-                      <div
-                        class="form-check form-inline p-0 d-flex align-items-center mt-1"
-                      >
-                        <input
-                          class="form-check-input"
-                          type="checkbox"
-                          value=""
-                          id="defaultCheck1"
-                        />
-                      </div>
-                    </td>
-                    <td>Frederiksberg Politi</td>
-                    <td>1988</td>
-                    <td>2020</td>
-                    <td>Officielt</td>
-                  </tr>
-                  <tr class="clickable-checkbox">
-                    <td>
-                      <div
-                        class="form-check form-inline p-0 d-flex align-items-center mt-1"
-                      >
-                        <input
-                          class="form-check-input"
-                          type="checkbox"
-                          value=""
-                          id="defaultCheck1"
-                        />
-                      </div>
-                    </td>
-                    <td>Frederiksberg Politi</td>
-                    <td>1988</td>
-                    <td>2020</td>
-                    <td>Officielt</td>
-                  </tr>
-                  <tr class="clickable-checkbox">
-                    <td>
-                      <div
-                        class="form-check form-inline p-0 d-flex align-items-center mt-1"
-                      >
-                        <input
-                          class="form-check-input"
-                          type="checkbox"
-                          value=""
-                          id="defaultCheck1"
-                        />
-                      </div>
-                    </td>
-                    <td>Frederiksberg Politi</td>
-                    <td>1988</td>
-                    <td>2020</td>
-                    <td>Officielt</td>
-                  </tr>
-                </tbody>
-              </table>
+            <h4 class="mb-3 ml-2 mt-3">
+              <span class="font-weight-bold">33</span> resultater
+            </h4>
+            <div class="card">
+              <div class="card-body p-0">
+                <div class="table-responsive">
+                  <table
+                    id=""
+                    width="100%"
+                    class="table sorting table-hover table-striped mb-0"
+                  >
+                    <thead>
+                      <tr>
+                        <th scope="col" class="d-flex align-items-center">
+                          <div
+                            class="form-check form-inline p-0 d-flex align-items-center"
+                          >
+                            <input
+                              class="form-check-input"
+                              type="checkbox"
+                              value=""
+                              class="clickable-checkbox-all"
+                              id="defaultCheck1"
+                            />
+                          </div>
+                        </th>
+                        <th scope="col">Navn</th>
+                        <th scope="col">Fra</th>
+                        <th scope="col">Til</th>
+                        <th scope="col">Navnetype</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr class="clickable-checkbox">
+                        <td>
+                          <div
+                            class="form-check form-inline p-0 d-flex align-items-center mt-1"
+                          >
+                            <input
+                              class="form-check-input"
+                              type="checkbox"
+                              value=""
+                              id="defaultCheck1"
+                            />
+                          </div>
+                        </td>
+                        <td>Frederiksberg Politi</td>
+                        <td>1988</td>
+                        <td>2020</td>
+                        <td>Officielt</td>
+                      </tr>
+                      <tr class="clickable-checkbox">
+                        <td>
+                          <div
+                            class="form-check form-inline p-0 d-flex align-items-center mt-1"
+                          >
+                            <input
+                              class="form-check-input"
+                              type="checkbox"
+                              value=""
+                              id="defaultCheck1"
+                            />
+                          </div>
+                        </td>
+                        <td>Frederiksberg Politi</td>
+                        <td>1988</td>
+                        <td>2020</td>
+                        <td>Officielt</td>
+                      </tr>
+                      <tr class="clickable-checkbox">
+                        <td>
+                          <div
+                            class="form-check form-inline p-0 d-flex align-items-center mt-1"
+                          >
+                            <input
+                              class="form-check-input"
+                              type="checkbox"
+                              value=""
+                              id="defaultCheck1"
+                            />
+                          </div>
+                        </td>
+                        <td>Frederiksberg Politi</td>
+                        <td>1988</td>
+                        <td>2020</td>
+                        <td>Officielt</td>
+                      </tr>
+                      <tr class="clickable-checkbox">
+                        <td>
+                          <div
+                            class="form-check form-inline p-0 d-flex align-items-center mt-1"
+                          >
+                            <input
+                              class="form-check-input"
+                              type="checkbox"
+                              value=""
+                              id="defaultCheck1"
+                            />
+                          </div>
+                        </td>
+                        <td>Frederiksberg Politi</td>
+                        <td>1988</td>
+                        <td>2020</td>
+                        <td>Officielt</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
             </div>
           </div>
           <div class="modal-footer">
@@ -2141,7 +2151,7 @@ of Lorem Ipsum.
                   d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z"
                 />
               </svg>
-              <span>Tilføj</span>
+              <span>Tilknyt</span>
             </button>
           </div>
         </div>
