--- a/search/search-eksemplar.html
+++ b/search/search-eksemplar.html
@@ -219,7 +219,7 @@
                     </tr>
                     <tr
                       class="clickable-row"
-                      data-href="../heuristiskenhed.html"
+                      data-href="../heuristiskenhed.html#heeksemplarer"
                     >
                       <td>
                         FRB Politi
@@ -234,7 +234,7 @@
                     </tr>
                     <tr
                       class="clickable-row"
-                      data-href="../heuristiskenhed.html"
+                      data-href="../heuristiskenhed.html#heeksemplarer"
                     >
                       <td>
                         FRB Politi
@@ -249,7 +249,7 @@
                     </tr>
                     <tr
                       class="clickable-row"
-                      data-href="../heuristiskenhed.html"
+                      data-href="../heuristiskenhed.html#heeksemplarer"
                     >
                       <td>
                         FRB Politi
@@ -262,7 +262,10 @@
                       <td>Papir</td>
                       <td>sh1284</td>
                     </tr>
-                    <tr class="clickable-row" data-href="../arkivskaber.html">
+                    <tr
+                      class="clickable-row"
+                      data-href="../heuristiskenhed.html#heeksemplarer"
+                    >
                       <td>
                         FRB Politi
                       </td>
@@ -274,7 +277,10 @@
                       <td>Papir</td>
                       <td>sh1284</td>
                     </tr>
-                    <tr class="clickable-row" data-href="../arkivskaber.html">
+                    <tr
+                      class="clickable-row"
+                      data-href="../heuristiskenhed.html#heeksemplarer"
+                    >
                       <td>
                         FRB Politi
                       </td>
