--- a/magasinenhed.html
+++ b/magasinenhed.html
@@ -621,11 +621,7 @@
                                 <li class="list-group-item">
                                   <div class="row d-flex align-items-center">
                                     <div class="col-sm-12">
-                                      <button
-                                        class="btn btn-sm btn-outline-primary"
-                                      >
-                                        Tilføj Midlertid placering
-                                      </button>
+                                      -
                                     </div>
                                   </div>
                                 </li>
@@ -739,7 +735,7 @@
                         </div>
                       </div>
                       <hr />
-                      <div class="row mt-5 mb-3">
+                      <div class="row mt-5 mb-3 mr-1 ml-1">
                         <div class="col-sm-12">
                           <div
                             class="d-flex align-items-center justify-content-between mr-3 ml-1"
