--- a/arbejdsopgave.html
+++ b/arbejdsopgave.html
@@ -551,11 +551,18 @@ Nørregade 56
                 </form>
               </div>
             </div>
-            <div class="card special">
+            <div class="card mb-3">
+              <div class="card-body p-0">
+                <h4 class="mb-3 ml-3 mt-3">
+                  <span class="font-weight-bold">33</span> resultater
+                </h4>
+              </div>
+            </div>
+            <div class="card">
               <div class="card-body p-0">
                 <div class="table-responsive">
                   <table
-                    id=""
+                    id="tilknyteks-tabel"
                     width="100%"
                     class="table sorting table-hover table-striped mb-0"
                   >
