--- a/heuristiskenhed.html
+++ b/heuristiskenhed.html
@@ -2896,9 +2896,9 @@ versions of Lorem Ipsum.
                 </div>
               </div>
             </div>
-            <div class="card">
+            <div class="card mt-3">
               <div class="card-body p-0">
-                            <h4 class="mb-3 ml-2 mt-3">
+                            <h4 class="mb-3 ml-3 mt-3">
               <span class="font-weight-bold">33</span> resultater
             </h4>
               </div>
