Made first updates to magasinenhed

--- a/magasinenhed.html
+++ b/magasinenhed.html
@@ -320,10 +320,11 @@
                           </li>
                           <li class="list-group-item">
                             <div class="row d-flex align-items-center">
-                              <div class="col-sm-12">
-                                <p class="font-weight-semibold">Indhold</p>
-                                <p class="mb-0">1993 1 -</p>
-                                <p>1994 5778</p>
+                              <div class="col-sm-6 font-weight-semibold">
+                                Indhold
+                              </div>
+                              <div class="col-sm-6">
+                                <p class="mb-0">1993 1 -<br /> 1994 5778</p>
                               </div>
                             </div>
                           </li>
@@ -352,171 +353,22 @@
                           </h4>
                         </div>
                         <div class="row">
-                          <div class="col-sm-6">
-                            <ul class="list-group mb-5 ml-3">
-                              <li class="list-group-item bg-light font-weight-semibold">
-                                Permanent tilknyttet placering
-                              </li>
-                              <li class="list-group-item">
-                                <div class="row d-flex align-items-center">
-                                  <div class="col-sm-6">
-                                    Bygning
+                          <div class="col-sm-12">
+                            <ul class="list-group mb-5 mr-3 ml-3">
+                              <li class="list-group-item bg-light">
+                                <div class="row">
+                                  <div class="col-sm-4 font-weight-semibold text-muted">Permanent placering
                                   </div>
-                                  <div class="col-sm-6 readonly text-secondary">
-                                    21
-                                  </div>
+                                  <div class="col-sm-4 text-muted">21+Mez5+1+101+09+04</div>
+                                  <div class="col-sm-4 text-right"></div>
                                 </div>
                               </li>
-                              <li class="list-group-item">
+                              <li class="list-group-item ">
                                 <div class="row d-flex align-items-center">
-                                  <div class="col-sm-6">
-                                    Magasin
-                                  </div>
-                                  <div class="col-sm-6 readonly text-secondary">
-                                    Høj2
-                                  </div>
-                                </div>
-                              </li>
-                              <li class="list-group-item">
-                                <div class="row d-flex align-items-center">
-                                  <div class="col-sm-6">
-                                    Rum mv.
-                                  </div>
-                                  <div class="col-sm-6 readonly text-secondary">
-                                    2
-                                  </div>
-                                </div>
-                              </li>
-                              <li class="list-group-item">
-                                <div class="row d-flex align-items-center">
-                                  <div class="col-sm-6">
-                                    Reol
-                                  </div>
-                                  <div class="col-sm-6 readonly text-secondary">
-                                    04
-                                  </div>
-                                </div>
-                              </li>
-                              <li class="list-group-item">
-                                <div class="row d-flex align-items-center">
-                                  <div class="col-sm-6">
-                                    Fag
-                                  </div>
-                                  <div class="col-sm-6 readonly text-secondary">
-                                    05
-                                  </div>
-                                </div>
-                              </li>
-                              <li class="list-group-item">
-                                <div class="row d-flex align-items-center">
-                                  <div class="col-sm-6">
-                                    Bærelag
-                                  </div>
-                                  <div class="col-sm-6 readonly text-secondary">
-                                    30
-                                  </div>
-                                </div>
-                              </li>
-                              <li class="list-group-item">
-                                <div class="row d-flex align-items-center">
-                                  <div class="col-sm-6">
-                                    Skuffe
-                                  </div>
-                                  <div class="col-sm-6 readonly text-secondary">
-                                    4
-                                  </div>
-                                </div>
-                              </li>
-                              <li class="list-group-item">
-                                <div class="row d-flex align-items-center">
-                                  <div class="col-sm-12">
-                                    -
-                                  </div>
-                                </div>
-                              </li>
-                            </ul>
-                          </div>
-                          <div class="col-sm-6">
-                            <ul class="list-group mb-5 mr-3">
-                              <li class="list-group-item bg-light font-weight-semibold">
-                                Midlertidig placering
-                              </li>
-                              <li class="list-group-item">
-                                <div class="row d-flex align-items-center">
-                                  <div class="col-sm-6">
-                                    Bygning
-                                  </div>
-                                  <div class="col-sm-6 readonly text-secondary">
-                                    21
-                                  </div>
-                                </div>
-                              </li>
-                              <li class="list-group-item">
-                                <div class="row d-flex align-items-center">
-                                  <div class="col-sm-6">
-                                    Magasin
-                                  </div>
-                                  <div class="col-sm-6 readonly text-secondary">
-                                    Høj2
-                                  </div>
-                                </div>
-                              </li>
-                              <li class="list-group-item">
-                                <div class="row d-flex align-items-center">
-                                  <div class="col-sm-6">
-                                    Rum mv.
-                                  </div>
-                                  <div class="col-sm-6 readonly text-secondary">
-                                    2
-                                  </div>
-                                </div>
-                              </li>
-                              <li class="list-group-item">
-                                <div class="row d-flex align-items-center">
-                                  <div class="col-sm-6">
-                                    Reol
-                                  </div>
-                                  <div class="col-sm-6 readonly text-secondary">
-                                    04
-                                  </div>
-                                </div>
-                              </li>
-                              <li class="list-group-item">
-                                <div class="row d-flex align-items-center">
-                                  <div class="col-sm-6">
-                                    Fag
-                                  </div>
-                                  <div class="col-sm-6 readonly text-secondary">
-                                    05
-                                  </div>
-                                </div>
-                              </li>
-                              <li class="list-group-item">
-                                <div class="row d-flex align-items-center">
-                                  <div class="col-sm-6">
-                                    Bærelag
-                                  </div>
-                                  <div class="col-sm-6 readonly text-secondary">
-                                    30
-                                  </div>
-                                </div>
-                              </li>
-                              <li class="list-group-item">
-                                <div class="row d-flex align-items-center">
-                                  <div class="col-sm-6">
-                                    Skuffe
-                                  </div>
-                                  <div class="col-sm-6 readonly text-secondary">
-                                    4
-                                  </div>
-                                </div>
-                              </li>
-                              <li class="list-group-item">
-                                <div class="row d-flex align-items-center">
-                                  <div class="col-sm-12">
-                                    <button class="btn btn-sm btn-outline-danger">
-                                      Slet
-                                    </button>
+                                  <div class="col-sm-4 font-weight-semibold">Midlertidig placering</div>
+                                  <div class="col-sm-4">21+Mez5+1+101+09+04</div>
+                                  <div class="col-sm-4 text-right"><button
+                                      class="btn btn-sm btn-outline-danger">Slet</button>
                                   </div>
                                 </div>
                               </li>
@@ -547,6 +399,7 @@
                                 <tr>
                                   <th scope="col">Arkivskaber</th>
                                   <th scope="col">Eksemplar</th>
+                                  <th scope="col">Indhold</th>
                                   <th scope="col" class="hidden">&nbsp;</th>
                                 </tr>
                               </thead>
@@ -558,10 +411,17 @@
                                     <a href="#a">Kgl. Grønlandske Hand, Ø</a>
                                   </td>
                                   <td>Brevkopier (1966-1985)</td>
+                                  <td>meget lang lang lang lang lang tekst meget lang lang lang lang lang tekst meget
+                                    lang lang lang lang lang tekst meget lang lang lang lang lang tekst meget lang lang
+                                    lang lang lang tekst </td>
                                   <td class="text-right">
-                                    <button class="btn btn-outline-primary btn-sm">
-                                      Detaljer
-                                    </button>
+                                    <a href="#edit" class="icon">
+                                      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="mr-2"
+                                        viewBox="0 0 16 16">
+                                        <path fill-rule="evenodd"
+                                          d="M8.06 2C3 2 0 8 0 8s3 6 8.06 6C13 14 16 8 16 8s-3-6-7.94-6zM8 12c-2.2 0-4-1.78-4-4 0-2.2 1.8-4 4-4 2.22 0 4 1.8 4 4 0 2.22-1.78 4-4 4zm2-4c0 1.11-.89 2-2 2-1.11 0-2-.89-2-2 0-1.11.89-2 2-2 1.11 0 2 .89 2 2z" />
+                                      </svg>
+                                    </a>
                                   </td>
                                 </tr>
                               </tbody>
@@ -571,9 +431,6 @@
                               <div class="card m-lg-3 bg-light">
                                 <div class="card-body">
                                   <div class="d-flex align-items-center justify-content-between">
-                                    <h3 class="font-weight-bold mt-3 mb-3">
-                                      Kgl. Grønlandske Hand, Ø
-                                    </h3>
                                     <button class="btn btn-primary float-right readonly edit">
                                       Rediger
                                     </button>
@@ -642,60 +499,15 @@
                                           </div>
                                         </li>
                                       </ul>
-                                      <button class="btn btn-outline-primary">
-                                        Flyt indhold til andet EP
+                                      <button class="btn btn-outline-primary write mb-3">
+                                        Flyt det valgte indhold til andet EP
+                                      </button>
+                                      <button class="btn btn-outline-primary write">
+                                        Flyt alle indhold til andet EP
                                       </button>
                                     </div>
                                     <div class="col-sm-8">
-                                      <div class="form-group">
-                                        <div class="card mt-3">
-                                          <div class="card-body">
-                                            <p class="font-weight-semibold">
-                                              Beskrivelse
-                                            </p>
-
-                                            <p class="readonly">
-                                              Lorem Ipsum is simply dummy text
-                                              of the printing and typesetting
-                                              industry. Lorem Ipsum has been
-                                              the industry's standard dummy
-                                              text ever since the 1500s, when
-                                              an unknown printer took a galley
-                                              of type and scrambled it to make
-                                              a type specimen book. It has
-                                              survived not only five
-                                              centuries, but also the leap
-                                              into electronic typesetting,
-                                              remaining essentially unchanged.
-                                              It was popularised in the 1960s
-                                              with the release of Letraset
-                                              sheets containing Lorem Ipsum
-                                              passages, and more recently with
-                                              desktop publishing software like
-                                              Aldus PageMaker including
-                                              versions of Lorem Ipsum.
-                                            </p>
-                                            <textarea rows="10" class="form-control write">
-Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
-text ever since the 1500s, when
-an unknown printer took a galley
-of type and scrambled it to make
-a type specimen book. It has
-survived not only five
-centuries, but also the leap
-into electronic typesetting,
-remaining essentially unchanged.
-It was popularised in the 1960s
-with the release of Letraset
-sheets containing Lorem Ipsum
-passages, and more recently with
-desktop publishing software like
-Aldus PageMaker including
-versions of Lorem Ipsum.            
-                                              </textarea>
-                                          </div>
-                                        </div>
-                                      </div>
+                                      ?
                                     </div>
                                   </div>
                                 </div>
