Added last changes for magasinenhed

--- a/magasinenhed.html
+++ b/magasinenhed.html
@@ -411,9 +411,9 @@
                                     <a href="#a">Kgl. Grønlandske Hand, Ø</a>
                                   </td>
                                   <td>Brevkopier (1966-1985)</td>
-                                  <td>meget lang lang lang lang lang tekst meget lang lang lang lang lang tekst meget
-                                    lang lang lang lang lang tekst meget lang lang lang lang lang tekst meget lang lang
-                                    lang lang lang tekst </td>
+                                  <td>
+                                    <p class="m-0">meget lang tekst kan være her</p>
+                                  </td>
                                   <td class="text-right">
                                     <a href="#edit" class="icon">
                                       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="mr-2"
@@ -430,22 +430,9 @@
                               data-parent="#accordionEks">
                               <div class="card m-lg-3 bg-light">
                                 <div class="card-body">
-                                  <div class="d-flex align-items-center justify-content-between">
-                                    <button class="btn btn-primary float-right readonly edit">
-                                      Rediger
-                                    </button>
-                                    <div class="float-right write">
-                                      <button class="btn write save">
-                                        Annuller
-                                      </button>
-                                      <button class="btn btn-primary write save">
-                                        Gem
-                                      </button>
-                                    </div>
-                                  </div>
                                   <div class="row">
                                     <div class="col-sm-4">
-                                      <ul class="list-group mb-3 mt-3">
+                                      <ul class="list-group mb-3">
                                         <li class="list-group-item">
                                           <div class="row d-flex align-items-center">
                                             <div class="col-sm-6 font-weight-semibold">
@@ -472,6 +459,11 @@
                                             </div>
                                           </div>
                                         </li>
+                                      </ul>
+                                    </div>
+                                    <div class="col-sm-4">
+                                      <ul class="list-group mb-3">
+
                                         <li class="list-group-item">
                                           <div class="row d-flex align-items-center">
                                             <div class="col-sm-6 font-weight-semibold">
@@ -499,6 +491,8 @@
                                           </div>
                                         </li>
                                       </ul>
+                                    </div>
+                                    <div class="col-sm-4">
                                       <button class="btn btn-outline-primary write mb-3">
                                         Flyt det valgte indhold til andet EP
                                       </button>
@@ -506,8 +500,22 @@
                                         Flyt alle indhold til andet EP
                                       </button>
                                     </div>
-                                    <div class="col-sm-8">
-                                      ?
+                                  </div>
+                                  <div class="row">
+                                    <div class="col-sm-12">
+                                      <div class="d-flex align-items-center justify-content-between">
+                                        <button class="btn btn-primary float-right readonly edit">
+                                          Rediger
+                                        </button>
+                                        <div class="float-right write">
+                                          <button class="btn write save">
+                                            Annuller
+                                          </button>
+                                          <button class="btn btn-primary write save">
+                                            Gem
+                                          </button>
+                                        </div>
+                                      </div>
                                     </div>
                                   </div>
                                 </div>
@@ -525,6 +533,7 @@
         </div>
       </div>
     </div>
+  </div>
   </div>
   <!-- Heuristik Enhed Modal -->
   <div class="modal fade" id="heuristiskeenhed-modal" tabindex="-1" role="dialog"
